Fix some nagging spacing issues with the mobile version

--- a/splash_style.css
+++ b/splash_style.css
@@ -10,6 +10,8 @@
 	flex-direction: row;
 	padding-top: 0.5em;
 	padding-bottom: 0.5em;
+	margin-right: -1em;
+	margin-left: -1em;
 	background-color: #bef6ea;
 }
 
@@ -28,5 +30,5 @@ section {
 
 body {
 	font-family: sans-serif;
-    padding-top: 50px;
+    padding-top: 60px;
 }
